[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecommerce-returns-triage"
version = "0.1.0"
description = "OpenEnv benchmark for e-commerce return triage."
authors = [
    {name = "OpenEnv Developer"}
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.35.0",
    "pydantic>=2.6.1",
    "openai>=2.7.2",      
    "openenv-core>=0.2.3",
    "python-dotenv>=1.0.1"
]

[project.scripts]
server = "server.app:main"